# small-things

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  SlimeChunks.java  bf.rs  circle.rs  everything-about-a-circle.rs
brainfuck/: add.bf  brainfuck.rs  hello-world.bf  rot13.bf
chess-squeeze/: Cargo.toml
chess-squeeze/src/: lib.rs
currency/: Cargo.toml
currency/src/: main.rs
individuals/: Cargo.toml
linkedlist/src/: main.rs
pertsolve/: Cargo.toml
pertsolve/src/: continuous.rs  discrete.rs  lib.rs  main.rs
picofermibagel/: Cargo.toml
picofermibagel/src/: main.rs
population-squeeze/: Cargo.toml  countries.json
population-squeeze/src/: main.rs
randomize-solve/: Cargo.toml
randomize-solve/src/: main.rs
spreadmeasures/: Cargo.toml
spreadmeasures/src/: main.rs
stdlib-only-stuff/: build.sh  matrix-calculator  matrix-calculator.rs  wiggleworm  wiggleworm.rs
wiggleworm/: wiggleworm
